@@ -14,6 +14,9 @@ cod-tools (unreleased)
         numeric values;
       - a uniqueness constraint check for simple and composite loop references.
   * Changed:
+    - COD::AuthorNames:
+      - updated several error messages to only display the original author name
+        without any modifications;
     - COD::CIF::Data::AtomList:
       - rewritten dump_atoms_as_cif() using standard CIF printing routines.
     - COD::CIF::Parser::Yapp:
